--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -5,10 +5,9 @@
         </div>
 
         <ul class="d-flex">
-            <li class="center"><a >View All</a></li>
-            <li class="center"><a>Ask a Question</a></li>
-            <li class="center"><a>Services</a></li>
-            <li class="center"><a>Feedback</a></li>
+            <li class="center" ><a  [routerLink]="['/all']">View All Questions</a></li>
+            <li class="center"><a [routerLink]="['/create']">Ask a Question</a></li>
+            <li class="center"><a [routerLink]="['/profile']">My Profie</a></li>
         </ul>
     </div>
 </nav>
