--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <ul class="d-flex">
             <li class="center" ><a  [routerLink]="['/all']">View All Questions</a></li>
             <li class="center"><a [routerLink]="['/create']">Ask a Question</a></li>
-            <li class="center"><a [routerLink]="['/profile']">My Profie</a></li>
+            <li class="center"><a [routerLink]="['/profile']">My Profile</a></li>
         </ul>
     </div>
 </nav>
