kar lena subah code :)(;

--- a/src/app/quest-ans/create-quest/create-quest.component.html
+++ b/src/app/quest-ans/create-quest/create-quest.component.html
@@ -37,6 +37,8 @@
         </label>
       </div>
     </div>
+
+    <div class="progress"></div>
   
-    <button type="submit">Create Question</button>
+    <button type="submit"  (click)="startConfetti()">Create Question</button>
   </form>
